projects/hometown-homepage/styles.css
body {
    margin: 0;
}

.hero {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#hero-headline {
    background-color: #1D3557;
    border-radius: 20px;
    color: #FFFFFF;
    padding: 15px 40px;
    margin-bottom: 10px;
    font-size: 60px;
}

#hero-description {
    background-color: #457B9D;
    border-radius: 20px;
    color: #FFFFFF;
    margin-top: 0;
    padding: 15px 40px;
    font-size: 20px;
}

#img-vancouver {
    background-image: url('images/vancouver.webp');
    background-position: center;
    background-size: cover;
    height: 480px;
}

.activities {
    background: #F1FAEE;
    display: flex;
    justify-content: space-evenly;
    padding: 50px 0;
    height: 480px;
}

.activity {
    width: 220px;
}

.activity-title {
    text-align: center;
    margin: 8px 0;
}

.activity-description {
    font-size: 18px;
    margin: 8px 0 0 0;
}

.activity-img {
    border-radius: 50%;
    width: 200px;
    height: 200px;
    object-fit: cover;
}

.guide {
    background: #A8DADC;
    padding: 50px 0;
    text-align: center;
}

.guide-title {
    font-size: 30px;
    margin-bottom: 20px;
}

.guide-description {
    font-size: 18px;
    margin-bottom: 20px;
    width: auto;
}

.guide-button {
    color: #1D3557;
    font-size: 18px;
    font-weight: bold;
    background-color: #F1FAEE;
    border: none;
    padding: 10px 20px;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.guide-button:hover {
    text-decoration: underline;
    background-color: #457B9D;
    color: #FFFFFF;
}

.cabin-regular {
  font-family: "Cabin", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: "wdth" 100;
}

